--- a/styles/general_styles.css
+++ b/styles/general_styles.css
@@ -13,9 +13,13 @@ html {
 }
 
 /* When flexed boxes are resized, their content will be cut off. I found these properties at https://www.w3schools.com/cssref/tryit.php?filename=trycss3_text-overflow. */
-div div div, #navbar p { /* TODO: Change this to use a class that hides overflow so it affects ONLY the elements it should for a scrollbar. */
+.scrollable { /* TODO: Change this to use a class that hides overflow so it affects ONLY the elements it should for a scrollbar. */
+    overflow: scroll;
+    text-overflow: clip;
+}
+
+#navbar p, .clippable { /* If the text overflows in the navbar elements, do not try to show the overflowed text to preserve the shape of the button. Do the same for the clippable class. */
     overflow: hidden;
-    text-overflow: ellipsis;
 }
 
 /* Generic Body Styling */
