--- a/styles/general_styles.css
+++ b/styles/general_styles.css
@@ -12,16 +12,6 @@ html {
     font-size: 16px;
 }
 
-/* When flexed boxes are resized, their content will be cut off. I found these properties at https://www.w3schools.com/cssref/tryit.php?filename=trycss3_text-overflow. */
-.scrollable { /* TODO: Change this to use a class that hides overflow so it affects ONLY the elements it should for a scrollbar. */
-    overflow: scroll;
-    text-overflow: clip;
-}
-
-#navbar p, .clippable { /* If the text overflows in the navbar elements, do not try to show the overflowed text to preserve the shape of the button. Do the same for the clippable class. */
-    overflow: hidden;
-}
-
 /* Generic Body Styling */
 body {
     background: url("../resources/images/main-bg.jpg");
@@ -43,6 +33,7 @@ body {
     height: 0;
     min-height: 0;
     max-height: 0;
+    opacity: 0;
 }
 
 .bold {
@@ -53,15 +44,30 @@ body {
     font-style: italic;
 }
 
-.force-no-decoration { /* for manually specifying no underlines or other decorations on an element */
+.force-no-decoration { /* This is for manually specifying no underlines or other decorations on an element.*/
     text-decoration: none;
 }
 
-br.force-wrap { /* Create a line break that does not go way down */
+br.force-wrap { /* This creates a line break that does go down multiple lines like a normal blocking element would. This is here if needed. */
     display: block;
 }
 
-.inlined-image-container { /* for lining up an icon next to text */
+.inlined-image-container { /* This for lining up a small icon next to text. */
     position: relative;
     top: 5px;
+}
+
+li.subentry { /* This is for creating a sub-entry below a list element. This ensures the sub-entry has no dots or decoration. */
+    list-style-type: none;
+}
+
+/* Overflow Handling */
+/* When flexed boxes are resized, their content will be cut off. I found these properties at https://www.w3schools.com/cssref/tryit.php?filename=trycss3_text-overflow. */
+.scrollable { /* TODO: Change this to use a class that hides overflow so it affects ONLY the elements it should for a scrollbar. */
+    overflow: scroll;
+    text-overflow: clip;
+}
+
+#navbar p, .clippable { /* If the text overflows in the navbar elements, do not try to show the overflowed text to preserve the shape of the button. Do the same for the clippable class. */
+    overflow: hidden;
 }
