--- a/styles/general_styles.css
+++ b/styles/general_styles.css
@@ -63,18 +63,14 @@ li.subentry { /* This is for creating a sub-entry below a list element. This ens
 
 /* Overflow Handling */
 /* When flexed boxes are resized, their content will be cut off. I found these properties at https://www.w3schools.com/cssref/tryit.php?filename=trycss3_text-overflow. */
-.scrollable { /* TODO: Change this to use a class that hides overflow so it affects ONLY the elements it should for a scrollbar. */
-    overflow: scroll;
+.scrollable {
+    overflow: hidden;
     text-overflow: clip;
 }
 
 /* General navbar styling */
 #navbar p, .clippable { /* If the text overflows in the navbar elements, do not try to show the overflowed text to preserve the shape of the button. Do the same for the clippable class. */
     overflow: hidden;
-}
-
-#navbar a p { /* Select all links in the navigation bar */
-    /* Reserved for later */
 }
 
 #navbar {
