--- a/styles/resume_styles.css
+++ b/styles/resume_styles.css
@@ -17,10 +17,10 @@
 #outer-div div {
     display: flex;
     flex-direction: column;
-    text-align: center;
     border: 0.3em solid darkblue;
     margin: 0.2vh;
     height: 96vh;
+    padding: 0.2em;
     background-color: azure;
 }
 
@@ -34,8 +34,13 @@
 }
 
 /* Individual Bordered Containers */
-#resume-file {
+div div#resume-file {
+    padding: 0;
     width:60%;
+}
+
+div#certifications {
+    display: inline;
 }
 
 #references{
@@ -46,9 +51,23 @@
     max-height: 70vh;
 }
 
-iframe {
-    width: auto;
+div#certifications {
+    height: 50%;
+}
+
+div#other-links p{
+    line-height: 0;
+}
+
+/* Resume Sheet Styles */
+embed {
+    width: 100%;
     height: 100%;
+}
+
+/* Table Styles */
+td, th {
+    text-align: center;
 }
 
 /* Navigation Menu */
