--- a/styles/index_styles.css
+++ b/styles/index_styles.css
@@ -28,29 +28,38 @@ header h1, footer h1 {
     margin: 0.2vh;
 }
 
+footer {
+    position: relative;
+    z-index: 0;
+}
+
 #greater-portrait-photo {
-    flex: inherit; /* ensure the div with portrait photo, about me, and navigation are all flexing to their maximum possible size to fill up the screen. */
+    flex: inherit; /* Ensure the div with portrait photo, about me, and navigation are all flexing to their maximum possible size to fill up the screen. */
     margin: 0.2vh;
 }
 
 #about-nav {
     display: flex;
     margin: 0.2vh;
+    z-index: 1;
 }
 
 /* Individual Bordered Containers */
-#misc-images {
+#my-story {
     background-color: azure;
     width: 32%;
-    height: 98.6%;height: 98.6%;
-    text-align: center;
+    height: 98.6%;
     border: 0.2em solid darkblue;
     margin: 0.2vh;
+    padding-left: 0.2em;
+    padding-right: 0.2em;
+    padding-top: auto;
+    padding-bottom: auto;
 }
 
 #portrait-photo {
     height: 49.5%;
-    text-align: center;
+    text-align: center; /* This centers the portrait image. */
     border: 0.2em solid darkblue;
     margin: 0.2vh;
     padding: 0;
@@ -59,18 +68,27 @@ header h1, footer h1 {
     background-color: azure;
 }
 
-#credentials {
+#collage {
     width: 32%;
     height: 98.6%;
     border: 0.2em solid darkblue;
     margin: 0.2vh;
+    text-align: center;
     background-color: azure;
+}
+
+#collage img { /* Ensure images in the collage dynamically resize with viewport. */
+    max-width: 100%;
+    max-height: auto;
 }
 
 #about-me {
     width: 16%;
     height: 40vh;
-    text-align: center;
+    padding-left: 0.2em;
+    padding-right: 0.2em;
+    padding-top: auto;
+    padding-bottom: auto;
     border: 0.2em solid darkblue;
     margin: 0.2vh;
     flex: 1;
@@ -79,12 +97,10 @@ header h1, footer h1 {
 
 /* Navigation Menu */
 #navbar {
-    width: 15vw;
+    width: 16vw;
     height: 40vh;
-    text-align: center;
     border: 0.2em solid darkblue;
     margin: 0.2vh;
-    flex: 1;
 }
 
 #navbar p {
