--- a/styles/mission_styles.css
+++ b/styles/mission_styles.css
@@ -80,7 +80,10 @@ div div#portrait iframe {
     /* height: 100%; */
     width: 100%;
     max-height: 90%;
+}
 
+div div #portrait {
+    text-align: center;
 }
 
 div div div#beliefs { /* Ensure beliefs div displays p elements in block style. */
