--- a/styles/general_styles.css
+++ b/styles/general_styles.css
@@ -52,6 +52,10 @@ h4 {
     font-style: italic;
 }
 
+.white {
+    color: white;
+}
+
 .force-no-decoration { /* This is for manually specifying no underlines or other decorations on an element.*/
     text-decoration: none;
 }
