--- a/styles/mission_styles.css
+++ b/styles/mission_styles.css
@@ -77,7 +77,6 @@ ol li {
 /* div div#portrait { Portrait selector. For later use. } */
 
 div div#portrait iframe {
-    /* height: 100%; */
     width: 100%;
     max-height: 90%;
 }
@@ -86,7 +85,7 @@ div div #portrait {
     text-align: center;
 }
 
-div div div#beliefs { /* Ensure beliefs div displays p elements in block style. */
+div div div#beliefs { /* Ensure beliefs div displays p elements in block style and without whitespace at the top. */
     display: block;
     padding-top: 0;
     padding: 0.2em;
