Did polishing up for Milestone 2

--- a/styles/contact_styles.css
+++ b/styles/contact_styles.css
@@ -5,7 +5,16 @@
     Author:     Ryan Smaller
     Date:       4/13/25
 */
-/* Primary Containers */
+/* Header */
+header {
+    font-size: 0.7em;
+    text-align: center;
+    border: 0.3em solid darkblue;
+    margin: 0.2vh;
+    background-color: azure;
+}
+
+/* Organizational Containers */
 #outer-div { /* A flex container for everything but the header. This ensures the header will not be flexed in abnormal fashion. */
     display: flex;
     flex: 1;
@@ -14,13 +23,25 @@
     flex-direction: row;
 }
 
+#other-accounts { /* The outside container for the accounts table. */
+    border: 0.2em solid darkblue;
+    margin: 0.2em;
+    width: 49.4vw;
+    height: 50vh;
+    background-color: azure;
+}
+
+#availability-nav-horizontal {
+    display: flex;
+    flex-direction: row;
+}
+
+/* Individual Text Blocks */
 .text-block { /* For the verbal communication and messaging text blocks on-screen. */
     border: 0.2em solid darkblue;
     margin: 0.2em;
-    padding-left: 0.2em; /* padding from the right is not necessary due to text wrapping, and vertical padding does not align well with flex. */
+    padding-left: 0.2em; /* Padding from the right is not necessary due to text wrapping, and vertical padding does not align well with flex. */
     padding-right: 0.2em;
-    padding-top: auto;
-    padding-bottom: auto;
     width: 48vw;
     background-color: azure;
     max-height: 44vh; /* These heights are the default for information blocks when the telephone and messaging divs are not assigned heights from their ids. */
@@ -35,14 +56,6 @@
 #messaging {
     max-height: 58vh;
     height: 58vh;
-}
-
-#other-accounts { /* The outside container for the accounts table. */
-    border: 0.2em solid darkblue;
-    margin: 0.2em;
-    width: 49.4vw;
-    height: 50vh;
-    background-color: azure;
 }
 
 /* Table Selectors */
@@ -74,21 +87,7 @@ td, th {
     height: 20%; /* This should be 1 divided by the number of rows used in the table. */
 }
 
-/* Header */
-header {
-    font-size: 0.7em;
-    text-align: center;
-    border: 0.3em solid darkblue;
-    margin: 0.2vh;
-    background-color: azure;
-}
-
 /* Navigation Menu */
-#misc-nav-horizontal {
-    display: flex;
-    flex-direction: row;
-}
-
 #navbar {
     width: 27vw;
     height: 38vh;
@@ -103,19 +102,17 @@ header {
     height: 22.2%;
     max-width: 98%;
     text-align: center;
-    line-height: 8vh; /* centers text vertically */
+    line-height: 8vh; /* Centers text vertically. */
     background-color: azure;
 }
 
-/* Availability Sect */
+/* Availability */
 #availability-container {
     width: 21.6vw;
     height: 38vh;
     text-align: left;
-    padding-left: 0.2em; /* padding from the right is not necessary due to text wrapping, and vertical padding does not align well with flex. */
+    padding-left: 0.2em; /* Padding from the right is not necessary due to text wrapping, and vertical padding does not align well with flex. */
     padding-right: 0.2em;
-    padding-top: auto;
-    padding-bottom: auto;
     border: 0.2em solid darkblue;
     margin: 0.2vh;
     flex-direction: column;
