--- a/styles/general_styles.css
+++ b/styles/general_styles.css
@@ -60,10 +60,6 @@ h4 {
     text-decoration: none;
 }
 
-br.force-wrap { /* This creates a line break that does go down multiple lines like a normal blocking element would. This is here if needed. */
-    display: block;
-}
-
 .inlined-image-container { /* This for lining up a small icon next to text. */
     position: relative;
     top: 5px;
@@ -82,7 +78,7 @@ li.subentry { /* This is for creating a sub-entry below a list element. This ens
     overflow: scroll;
 }
 
-/* General navbar styling */
+/* General Navbar Styling */
 #navbar {
     background-color: lightblue;
 }
