--- a/styles/index_styles.css
+++ b/styles/index_styles.css
@@ -1,11 +1,11 @@
 /*
     Personal Website - Cover Page Stylesheet
-    Filename:   main_styles.css
+    Filename:   index_styles.css
 
     Author:     Ryan Smaller
     Date:       4/13/25
 */
-/* Header and Footer Elements */
+/* Header and Footer */
 header, footer {
     font-size: 0.7em;
     text-align: center;
@@ -20,17 +20,17 @@ header h1, footer h1 {
     line-height: 3vh;
 }
 
+footer {
+    position: relative;
+    z-index: 0; /* Ensure the footer appears above other flexed elements when the viewport overlaps. */
+}
+
 /* Organizational Containers */
 #body-div {
     display: flex;
     flex: 1;
     height: 84vh;
     margin: 0.2vh;
-}
-
-footer {
-    position: relative;
-    z-index: 0;
 }
 
 #greater-portrait-photo {
@@ -53,8 +53,6 @@ footer {
     margin: 0.2vh;
     padding-left: 0.2em;
     padding-right: 0.2em;
-    padding-top: auto;
-    padding-bottom: auto;
 }
 
 #portrait-photo {
@@ -66,6 +64,10 @@ footer {
     background: url("/resources/images/main/portrait-background.jpg");
     background-repeat: repeat;
     background-color: azure;
+}
+
+#portrait-photo img {
+    height: 100%;
 }
 
 #collage {
@@ -81,7 +83,6 @@ footer {
 
 #collage img { /* Ensure images in the collage dynamically resize with viewport. */
     max-width: 100%;
-    max-height: auto;
 }
 
 #about-me {
@@ -89,8 +90,6 @@ footer {
     height: 40vh;
     padding-left: 0.2em;
     padding-right: 0.2em;
-    padding-top: auto;
-    padding-bottom: auto;
     border: 0.2em solid darkblue;
     margin: 0.2vh;
     flex: 1;
