--- a/styles/portfolio_styles.css
+++ b/styles/portfolio_styles.css
@@ -5,7 +5,7 @@
     Author:     Ryan Smaller
     Date:       4/13/25
 */
-/* Header Element */
+/* Header */
 header {
     font-size: 0.7em;
     text-align: center;
@@ -52,8 +52,6 @@ div div div {
     line-height: 2em;
     padding-top: 0;
     padding-bottom: 0.2em;
-    padding-left: auto;
-    padding-right: auto;
 }
 
 .portfolio-unit p {
