--- a/styles/index_styles.css
+++ b/styles/index_styles.css
@@ -76,7 +76,7 @@ footer {
 }
 
 #portrait-photo img {
-    height: 100%;
+    max-height: 100%;
 }
 
 #collage {
@@ -95,13 +95,12 @@ footer {
 }
 
 #about-me {
-    width: 16%;
+    width: 50%;
     height: 40vh;
     padding-left: 0.2em;
     padding-right: 0.2em;
     border: 0.2em solid darkblue;
     margin: 0.2vh;
-    flex: 1;
     background-color: azure;
 }
 
@@ -111,12 +110,13 @@ footer {
     height: 40vh;
     border: 0.2em solid darkblue;
     margin: 0.2vh;
+    flex: 1;
 }
 
 #navbar p {
     border: 0.2em solid darkblue;
     margin: 0.2vh;
-    height: 31%;
+    height: 12.4vh;
     min-height: 30px;
     max-width: 98%;
     text-align: center;
