--- a/styles/links_styles.css
+++ b/styles/links_styles.css
@@ -19,8 +19,8 @@ a img:hover { /* When hovering over an image that works as a link, make it "ligh
 .link:active {
     color: blue;
     position: relative;
-    left: 1px;
-    top: 1px;
+    left: 0.05em;
+    top: 0.05em;
 }
 
 .link:visited, .link:visited:active {
@@ -31,10 +31,12 @@ a img:hover { /* When hovering over an image that works as a link, make it "ligh
     background-color: rgb(199, 221, 255);
     color: black;
     font-weight: bold;
+    box-shadow: 0.05em 0.05em 0.05em rgb(64, 64, 64);
 }
 
 .button-link p:active {
     color: white;
+    box-shadow: 0 0 0;
 }
 
 /* Navigation Pseudo-Classes */
@@ -42,13 +44,15 @@ a img:hover { /* When hovering over an image that works as a link, make it "ligh
     background-color: rgb(199, 221, 255);
     color: black;
     font-weight: bold;
+    box-shadow: 0.05em 0.05em 0.05em rgb(64, 64, 64);
 }
 
 #navbar p:active {
     color:white;
     position: relative;
-    left: 1px;
-    top: 1px;
+    left: 0.05em;
+    top: 0.05em;
+    box-shadow: 0 0 0;
 }
 
 #navbar a:visited {
