Updated background images on main page

--- a/styles/index_styles.css
+++ b/styles/index_styles.css
@@ -72,7 +72,7 @@ footer {
     padding: 0;
     background: url("/resources/images/main/portrait-background.jpg");
     background-repeat: repeat;
-    background-color: azure;
+    /* background-color: azure; */
 }
 
 #portrait-photo img {
@@ -85,7 +85,7 @@ footer {
     border: 0.2em solid darkblue;
     margin: 0.2vh;
     text-align: center;
-    background-color: azure;
+    /* background-color: azure; */
     background: url("/resources/images/main/portrait-background2.jpg");
     background-repeat: repeat;
 }
