--- a/styles/index_styles.css
+++ b/styles/index_styles.css
@@ -70,9 +70,9 @@ footer {
     border: 0.2em solid darkblue;
     margin: 0.2vh;
     padding: 0;
-    background-image: url("/resources/images/main/portrait-background.jpg") !important;
+    background-image: url("../resources/images/main/portrait-background.jpg") !important;
     background-repeat: repeat;
-    /* background-color: azure; */
+    background-color: azure;
 }
 
 #portrait-photo img {
@@ -85,9 +85,9 @@ footer {
     border: 0.2em solid darkblue;
     margin: 0.2vh;
     text-align: center;
-    /* background-color: azure; */
-    background-image: url("/resources/images/main/portrait-background2.jpg") !important;
+    background-image: url("../resources/images/main/portrait-background2.jpg") !important;
     background-repeat: repeat;
+    background-color: azure;
 }
 
 #collage img { /* Ensure images in the collage dynamically resize with viewport. */
