--- a/styles/index_styles.css
+++ b/styles/index_styles.css
@@ -72,7 +72,7 @@ footer {
     padding: 0;
     background-image: url("../resources/images/main/portrait-background.jpg") !important;
     background-repeat: repeat;
-    /* background-color: azure; */
+    background-color: azure;
 }
 
 #portrait-photo img {
@@ -87,7 +87,7 @@ footer {
     text-align: center;
     background-image: url("../resources/images/main/portrait-background2.jpg") !important;
     background-repeat: repeat;
-    /* background-color: azure; */
+    background-color: azure;
 }
 
 #collage img { /* Ensure images in the collage dynamically resize with viewport. */
