Bug fixed a margin issue with mission navbar

--- a/styles/mission_styles.css
+++ b/styles/mission_styles.css
@@ -112,10 +112,10 @@ div div div#acm-code, div div div#sysadmin-book { /* Ensure references div alway
 #navbar p {
     text-align: center;
     border: 0.2em solid darkblue;
-    min-height: 20px;
-    height: 7vh;
-    margin: 0.2em;
+    /* min-height: 20px; */
+    height: calc((97% - 0.4vh) / 4 - 0.33em);
+    margin: 0.2vh;
     font-size: 16px;
-    line-height: 7vh; /* Centers text vertically. */
+    line-height: calc(((97% - 0.4vh) / 4 - 0.33em) + 7vh); /* Centers text vertically. */
     background-color: azure;
 }
