--- a/styles/mission_styles.css
+++ b/styles/mission_styles.css
@@ -10,6 +10,7 @@ header {
     font-size: 0.7em;
     text-align: center;
     border: 0.3em solid darkblue;
+    border-radius: 7px;
     margin: 0.2em;
     background-color: azure;
 }
@@ -21,6 +22,7 @@ header {
 
 #left-main-div{ /* Style the left side outer container. */
     border: 0.2em solid darkblue;
+    border-radius: 7px;
     width: 90%;
     height: 89vh;
     display: flex;
@@ -30,6 +32,7 @@ header {
 
 #right-main-div { /* Styling for the large right side container. */
     border: 0.2em solid darkblue;
+    border-radius: 7px;
     width: 50%;
     height: 89vh;
     display: flex;
@@ -44,6 +47,7 @@ div#left-top-div div { /* Flex the ethical background and photo/video container 
 
 div#left-main-div div, div#right-main-div div { /* Set the bordering, heights, flexing, and margins for the majority of content on the page. */
     border: 0.2em solid darkblue;
+    border-radius: 7px;
     margin: 0.1em;
     max-height: 96.3%;
     height: 43vh;
@@ -85,6 +89,10 @@ div div#video-embed {
     text-align: center;
 }
 
+div div#video-embed p {
+    margin-bottom: 0;
+}
+
 div div div#beliefs { /* Ensure beliefs div displays p elements in block style and without whitespace at the top. */
     display: block;
     padding-top: 0;
@@ -105,6 +113,7 @@ div div div#acm-code, div div div#sysadmin-book { /* Ensure references div alway
 /* Navigation Menu */
 #navbar {
     border: 0.2em solid darkblue;
+    border-radius: 7px;
     margin: 0.2em;
     height: 97%;
 }
@@ -112,6 +121,7 @@ div div div#acm-code, div div div#sysadmin-book { /* Ensure references div alway
 #navbar p {
     text-align: center;
     border: 0.2em solid darkblue;
+    border-radius: 7px;
     /* min-height: 20px; */
     height: calc((97% - 0.4vh) / 4 - 0.33em);
     margin: 0.2vh;
