--- a/styles/index_styles.css
+++ b/styles/index_styles.css
@@ -10,7 +10,7 @@ header, footer {
     font-size: 0.7em;
     text-align: center;
     border: 0.3em solid darkblue;
-    border-radius: 7px;
+    border-radius: 7px !important;
     margin: 0.2vh;
     height: 6vh;
     min-height: 30px;
