--- a/styles/portfolio_styles.css
+++ b/styles/portfolio_styles.css
@@ -9,7 +9,7 @@
 header {
     font-size: 0.7em;
     text-align: center;
-    border: 0.3em solid forestgreen;
+    border: 0.3em solid darkblue;
     border-radius: 7px;
     margin: 0.2em;
     width: calc(100% - 1em);
