--- a/styles/index_styles.css
+++ b/styles/index_styles.css
@@ -70,11 +70,19 @@ footer {
     padding: 0;
     background-image: url("../resources/images/main/portrait-background.jpg") !important;
     background-repeat: repeat;
-    background-color: azure;
+    background-color: #f0ffff;
+    width: 40vw;
 }
 
 #portrait-photo img {
     max-height: 100%;
+    max-width: 100%;
+    width: auto;
+    height: auto;
+    position: relative;
+    top: 50%;
+    transform: translateY(-50%); /* For centering image vertically. Cited from https://stackoverflow.com/questions/7273338/how-to-vertically-align-an-image-inside-a-div */
+    margin: auto;
 }
 
 #collage {
