--- a/styles/links_styles.css
+++ b/styles/links_styles.css
@@ -12,7 +12,7 @@
     color: blue;
 }
 
-.link:active { /* Links which have not been visited before and are being clicked on will move down slightly and appear blue. */
+.link:active { /* Links which are being clicked on will move down slightly and appear blue. */
     color: blue;
     position: relative;
     left: 0.05em;
@@ -24,7 +24,7 @@
 }
 
 .link:visited, .link:visited:active { /* Any visited link not being hovered over or being clicked on will appear dark blue. */
-    color: darkblue;
+    color: darkblue; /* This coloring overwrites the .link:active selector. */
 }
 
 .button-link p:hover { /* For links where the entire text box is meant to serve as a button to click on, the button-link class is used to change the background color. */
