--- a/styles/resume_styles.css
+++ b/styles/resume_styles.css
@@ -76,14 +76,14 @@ td, th {
     border: 0.2em solid darkblue;
     border-radius: 7px;
     margin: 0.2vh;
+    padding: 0;
     flex: 1;
 }
 
 #navbar p {
     border: 0.3em solid darkblue;
     border-radius: 7px;
-    min-height: 20px;
-    height: calc((23vh - 0.2em) / 4);
+    height: calc((29vh - 4em) / 4 + 0.225em);
     margin: 0.2em;
     line-height: 6vh; /* centers text vertically */
     background-color: azure;
